docs/api/generated/nebius/iam/v2/variables/AccessKeyServiceServiceDescription.md
[**@nebius/nodejs-sdk**](../../../../../README.md)

***

[@nebius/nodejs-sdk](../../../../../README.md) / [generated/nebius/iam/v2](../README.md) / AccessKeyServiceServiceDescription

# Variable: AccessKeyServiceServiceDescription

> **AccessKeyServiceServiceDescription**: `object`

Defined in: src/generated/nebius/iam/v2/index.ts:1354

## Type Declaration

### activate

> `readonly` **activate**: `object`

#### activate.path

> `readonly` **path**: `"/nebius.iam.v2.AccessKeyService/Activate"` = `"/nebius.iam.v2.AccessKeyService/Activate"`

#### activate.requestDeserialize()

> `readonly` **requestDeserialize**: (`value`) => [`ActivateAccessKeyRequest`](../interfaces/ActivateAccessKeyRequest.md)

##### Parameters

###### value

`Buffer`

##### Returns

[`ActivateAccessKeyRequest`](../interfaces/ActivateAccessKeyRequest.md)

#### activate.requestSerialize()

> `readonly` **requestSerialize**: (`value`) => `Buffer`\<`ArrayBuffer`\>

##### Parameters

###### value

[`ActivateAccessKeyRequest`](../interfaces/ActivateAccessKeyRequest.md)

##### Returns

`Buffer`\<`ArrayBuffer`\>

#### activate.requestStream

> `readonly` **requestStream**: `false` = `false`

#### activate.responseDeserialize()

> `readonly` **responseDeserialize**: (`value`) => [`Operation`](../../../common/v1/interfaces/Operation.md)

##### Parameters

###### value

`Buffer`

##### Returns

[`Operation`](../../../common/v1/interfaces/Operation.md)

#### activate.responseSerialize()

> `readonly` **responseSerialize**: (`value`) => `Buffer`\<`ArrayBuffer`\>

##### Parameters

###### value

[`Operation`](../../../common/v1/interfaces/Operation.md)

##### Returns

`Buffer`\<`ArrayBuffer`\>

#### activate.responseStream

> `readonly` **responseStream**: `false` = `false`

### activateByAwsId

> `readonly` **activateByAwsId**: `object`

#### activateByAwsId.path

> `readonly` **path**: `"/nebius.iam.v2.AccessKeyService/ActivateByAwsId"` = `"/nebius.iam.v2.AccessKeyService/ActivateByAwsId"`

#### activateByAwsId.requestDeserialize()

> `readonly` **requestDeserialize**: (`value`) => [`ActivateAccessKeyByAwsIdRequest`](../interfaces/ActivateAccessKeyByAwsIdRequest.md)

##### Parameters

###### value

`Buffer`

##### Returns

[`ActivateAccessKeyByAwsIdRequest`](../interfaces/ActivateAccessKeyByAwsIdRequest.md)

#### activateByAwsId.requestSerialize()

> `readonly` **requestSerialize**: (`value`) => `Buffer`\<`ArrayBuffer`\>

##### Parameters

###### value

[`ActivateAccessKeyByAwsIdRequest`](../interfaces/ActivateAccessKeyByAwsIdRequest.md)

##### Returns

`Buffer`\<`ArrayBuffer`\>

#### activateByAwsId.requestStream

> `readonly` **requestStream**: `false` = `false`

#### activateByAwsId.responseDeserialize()

> `readonly` **responseDeserialize**: (`value`) => [`Operation`](../../../common/v1/interfaces/Operation.md)

##### Parameters

###### value

`Buffer`

##### Returns

[`Operation`](../../../common/v1/interfaces/Operation.md)

#### activateByAwsId.responseSerialize()

> `readonly` **responseSerialize**: (`value`) => `Buffer`\<`ArrayBuffer`\>

##### Parameters

###### value

[`Operation`](../../../common/v1/interfaces/Operation.md)

##### Returns

`Buffer`\<`ArrayBuffer`\>

#### activateByAwsId.responseStream

> `readonly` **responseStream**: `false` = `false`

### create

> `readonly` **create**: `object`

#### create.path

> `readonly` **path**: `"/nebius.iam.v2.AccessKeyService/Create"` = `"/nebius.iam.v2.AccessKeyService/Create"`

#### create.requestDeserialize()

> `readonly` **requestDeserialize**: (`value`) => [`CreateAccessKeyRequest`](../interfaces/CreateAccessKeyRequest.md)

##### Parameters

###### value

`Buffer`

##### Returns

[`CreateAccessKeyRequest`](../interfaces/CreateAccessKeyRequest.md)

#### create.requestSerialize()

> `readonly` **requestSerialize**: (`value`) => `Buffer`\<`ArrayBuffer`\>

##### Parameters

###### value

[`CreateAccessKeyRequest`](../interfaces/CreateAccessKeyRequest.md)

##### Returns

`Buffer`\<`ArrayBuffer`\>

#### create.requestStream

> `readonly` **requestStream**: `false` = `false`

#### create.responseDeserialize()

> `readonly` **responseDeserialize**: (`value`) => [`Operation`](../../../common/v1/interfaces/Operation.md)

##### Parameters

###### value

`Buffer`

##### Returns

[`Operation`](../../../common/v1/interfaces/Operation.md)

#### create.responseSerialize()

> `readonly` **responseSerialize**: (`value`) => `Buffer`\<`ArrayBuffer`\>

##### Parameters

###### value

[`Operation`](../../../common/v1/interfaces/Operation.md)

##### Returns

`Buffer`\<`ArrayBuffer`\>

#### create.responseStream

> `readonly` **responseStream**: `false` = `false`

### deactivate

> `readonly` **deactivate**: `object`

#### deactivate.path

> `readonly` **path**: `"/nebius.iam.v2.AccessKeyService/Deactivate"` = `"/nebius.iam.v2.AccessKeyService/Deactivate"`

#### deactivate.requestDeserialize()

> `readonly` **requestDeserialize**: (`value`) => [`DeactivateAccessKeyRequest`](../interfaces/DeactivateAccessKeyRequest.md)

##### Parameters

###### value

`Buffer`

##### Returns

[`DeactivateAccessKeyRequest`](../interfaces/DeactivateAccessKeyRequest.md)

#### deactivate.requestSerialize()

> `readonly` **requestSerialize**: (`value`) => `Buffer`\<`ArrayBuffer`\>

##### Parameters

###### value

[`DeactivateAccessKeyRequest`](../interfaces/DeactivateAccessKeyRequest.md)

##### Returns

`Buffer`\<`ArrayBuffer`\>

#### deactivate.requestStream

> `readonly` **requestStream**: `false` = `false`

#### deactivate.responseDeserialize()

> `readonly` **responseDeserialize**: (`value`) => [`Operation`](../../../common/v1/interfaces/Operation.md)

##### Parameters

###### value

`Buffer`

##### Returns

[`Operation`](../../../common/v1/interfaces/Operation.md)

#### deactivate.responseSerialize()

> `readonly` **responseSerialize**: (`value`) => `Buffer`\<`ArrayBuffer`\>

##### Parameters

###### value

[`Operation`](../../../common/v1/interfaces/Operation.md)

##### Returns

`Buffer`\<`ArrayBuffer`\>

#### deactivate.responseStream

> `readonly` **responseStream**: `false` = `false`

### deactivateByAwsId

> `readonly` **deactivateByAwsId**: `object`

#### deactivateByAwsId.path

> `readonly` **path**: `"/nebius.iam.v2.AccessKeyService/DeactivateByAwsId"` = `"/nebius.iam.v2.AccessKeyService/DeactivateByAwsId"`

#### deactivateByAwsId.requestDeserialize()

> `readonly` **requestDeserialize**: (`value`) => [`DeactivateAccessKeyByAwsIdRequest`](../interfaces/DeactivateAccessKeyByAwsIdRequest.md)

##### Parameters

###### value

`Buffer`

##### Returns

[`DeactivateAccessKeyByAwsIdRequest`](../interfaces/DeactivateAccessKeyByAwsIdRequest.md)

#### deactivateByAwsId.requestSerialize()

> `readonly` **requestSerialize**: (`value`) => `Buffer`\<`ArrayBuffer`\>

##### Parameters

###### value

[`DeactivateAccessKeyByAwsIdRequest`](../interfaces/DeactivateAccessKeyByAwsIdRequest.md)

##### Returns

`Buffer`\<`ArrayBuffer`\>

#### deactivateByAwsId.requestStream

> `readonly` **requestStream**: `false` = `false`

#### deactivateByAwsId.responseDeserialize()

> `readonly` **responseDeserialize**: (`value`) => [`Operation`](../../../common/v1/interfaces/Operation.md)

##### Parameters

###### value

`Buffer`

##### Returns

[`Operation`](../../../common/v1/interfaces/Operation.md)

#### deactivateByAwsId.responseSerialize()

> `readonly` **responseSerialize**: (`value`) => `Buffer`\<`ArrayBuffer`\>

##### Parameters

###### value

[`Operation`](../../../common/v1/interfaces/Operation.md)

##### Returns

`Buffer`\<`ArrayBuffer`\>

#### deactivateByAwsId.responseStream

> `readonly` **responseStream**: `false` = `false`

### delete

> `readonly` **delete**: `object`

#### delete.path

> `readonly` **path**: `"/nebius.iam.v2.AccessKeyService/Delete"` = `"/nebius.iam.v2.AccessKeyService/Delete"`

#### delete.requestDeserialize()

> `readonly` **requestDeserialize**: (`value`) => [`DeleteAccessKeyRequest`](../interfaces/DeleteAccessKeyRequest.md)

##### Parameters

###### value

`Buffer`

##### Returns

[`DeleteAccessKeyRequest`](../interfaces/DeleteAccessKeyRequest.md)

#### delete.requestSerialize()

> `readonly` **requestSerialize**: (`value`) => `Buffer`\<`ArrayBuffer`\>

##### Parameters

###### value

[`DeleteAccessKeyRequest`](../interfaces/DeleteAccessKeyRequest.md)

##### Returns

`Buffer`\<`ArrayBuffer`\>

#### delete.requestStream

> `readonly` **requestStream**: `false` = `false`

#### delete.responseDeserialize()

> `readonly` **responseDeserialize**: (`value`) => [`Operation`](../../../common/v1/interfaces/Operation.md)

##### Parameters

###### value

`Buffer`

##### Returns

[`Operation`](../../../common/v1/interfaces/Operation.md)

#### delete.responseSerialize()

> `readonly` **responseSerialize**: (`value`) => `Buffer`\<`ArrayBuffer`\>

##### Parameters

###### value

[`Operation`](../../../common/v1/interfaces/Operation.md)

##### Returns

`Buffer`\<`ArrayBuffer`\>

#### delete.responseStream

> `readonly` **responseStream**: `false` = `false`

### deleteByAwsId

> `readonly` **deleteByAwsId**: `object`

#### deleteByAwsId.path

> `readonly` **path**: `"/nebius.iam.v2.AccessKeyService/DeleteByAwsId"` = `"/nebius.iam.v2.AccessKeyService/DeleteByAwsId"`

#### deleteByAwsId.requestDeserialize()

> `readonly` **requestDeserialize**: (`value`) => [`DeleteAccessKeyByAwsIdRequest`](../interfaces/DeleteAccessKeyByAwsIdRequest.md)

##### Parameters

###### value

`Buffer`

##### Returns

[`DeleteAccessKeyByAwsIdRequest`](../interfaces/DeleteAccessKeyByAwsIdRequest.md)

#### deleteByAwsId.requestSerialize()

> `readonly` **requestSerialize**: (`value`) => `Buffer`\<`ArrayBuffer`\>

##### Parameters

###### value

[`DeleteAccessKeyByAwsIdRequest`](../interfaces/DeleteAccessKeyByAwsIdRequest.md)

##### Returns

`Buffer`\<`ArrayBuffer`\>

#### deleteByAwsId.requestStream

> `readonly` **requestStream**: `false` = `false`

#### deleteByAwsId.responseDeserialize()

> `readonly` **responseDeserialize**: (`value`) => [`Operation`](../../../common/v1/interfaces/Operation.md)

##### Parameters

###### value

`Buffer`

##### Returns

[`Operation`](../../../common/v1/interfaces/Operation.md)

#### deleteByAwsId.responseSerialize()

> `readonly` **responseSerialize**: (`value`) => `Buffer`\<`ArrayBuffer`\>

##### Parameters

###### value

[`Operation`](../../../common/v1/interfaces/Operation.md)

##### Returns

`Buffer`\<`ArrayBuffer`\>

#### deleteByAwsId.responseStream

> `readonly` **responseStream**: `false` = `false`

### get

> `readonly` **get**: `object`

#### get.path

> `readonly` **path**: `"/nebius.iam.v2.AccessKeyService/Get"` = `"/nebius.iam.v2.AccessKeyService/Get"`

#### get.requestDeserialize()

> `readonly` **requestDeserialize**: (`value`) => [`GetAccessKeyRequest`](../interfaces/GetAccessKeyRequest.md)

##### Parameters

###### value

`Buffer`

##### Returns

[`GetAccessKeyRequest`](../interfaces/GetAccessKeyRequest.md)

#### get.requestSerialize()

> `readonly` **requestSerialize**: (`value`) => `Buffer`\<`ArrayBuffer`\>

##### Parameters

###### value

[`GetAccessKeyRequest`](../interfaces/GetAccessKeyRequest.md)

##### Returns

`Buffer`\<`ArrayBuffer`\>

#### get.requestStream

> `readonly` **requestStream**: `false` = `false`

#### get.responseDeserialize()

> `readonly` **responseDeserialize**: (`value`) => [`AccessKey`](../interfaces/AccessKey.md)

##### Parameters

###### value

`Buffer`

##### Returns

[`AccessKey`](../interfaces/AccessKey.md)

#### get.responseSerialize()

> `readonly` **responseSerialize**: (`value`) => `Buffer`\<`ArrayBuffer`\>

##### Parameters

###### value

[`AccessKey`](../interfaces/AccessKey.md)

##### Returns

`Buffer`\<`ArrayBuffer`\>

#### get.responseStream

> `readonly` **responseStream**: `false` = `false`

### getByAwsId

> `readonly` **getByAwsId**: `object`

#### getByAwsId.path

> `readonly` **path**: `"/nebius.iam.v2.AccessKeyService/GetByAwsId"` = `"/nebius.iam.v2.AccessKeyService/GetByAwsId"`

#### getByAwsId.requestDeserialize()

> `readonly` **requestDeserialize**: (`value`) => [`GetAccessKeyByAwsIdRequest`](../interfaces/GetAccessKeyByAwsIdRequest.md)

##### Parameters

###### value

`Buffer`

##### Returns

[`GetAccessKeyByAwsIdRequest`](../interfaces/GetAccessKeyByAwsIdRequest.md)

#### getByAwsId.requestSerialize()

> `readonly` **requestSerialize**: (`value`) => `Buffer`\<`ArrayBuffer`\>

##### Parameters

###### value

[`GetAccessKeyByAwsIdRequest`](../interfaces/GetAccessKeyByAwsIdRequest.md)

##### Returns

`Buffer`\<`ArrayBuffer`\>

#### getByAwsId.requestStream

> `readonly` **requestStream**: `false` = `false`

#### getByAwsId.responseDeserialize()

> `readonly` **responseDeserialize**: (`value`) => [`AccessKey`](../interfaces/AccessKey.md)

##### Parameters

###### value

`Buffer`

##### Returns

[`AccessKey`](../interfaces/AccessKey.md)

#### getByAwsId.responseSerialize()

> `readonly` **responseSerialize**: (`value`) => `Buffer`\<`ArrayBuffer`\>

##### Parameters

###### value

[`AccessKey`](../interfaces/AccessKey.md)

##### Returns

`Buffer`\<`ArrayBuffer`\>

#### getByAwsId.responseStream

> `readonly` **responseStream**: `false` = `false`

### list

> `readonly` **list**: `object`

#### list.path

> `readonly` **path**: `"/nebius.iam.v2.AccessKeyService/List"` = `"/nebius.iam.v2.AccessKeyService/List"`

#### list.requestDeserialize()

> `readonly` **requestDeserialize**: (`value`) => [`ListAccessKeysRequest`](../interfaces/ListAccessKeysRequest.md)

##### Parameters

###### value

`Buffer`

##### Returns

[`ListAccessKeysRequest`](../interfaces/ListAccessKeysRequest.md)

#### list.requestSerialize()

> `readonly` **requestSerialize**: (`value`) => `Buffer`\<`ArrayBuffer`\>

##### Parameters

###### value

[`ListAccessKeysRequest`](../interfaces/ListAccessKeysRequest.md)

##### Returns

`Buffer`\<`ArrayBuffer`\>

#### list.requestStream

> `readonly` **requestStream**: `false` = `false`

#### list.responseDeserialize()

> `readonly` **responseDeserialize**: (`value`) => [`ListAccessKeysResponse`](../interfaces/ListAccessKeysResponse.md)

##### Parameters

###### value

`Buffer`

##### Returns

[`ListAccessKeysResponse`](../interfaces/ListAccessKeysResponse.md)

#### list.responseSerialize()

> `readonly` **responseSerialize**: (`value`) => `Buffer`\<`ArrayBuffer`\>

##### Parameters

###### value

[`ListAccessKeysResponse`](../interfaces/ListAccessKeysResponse.md)

##### Returns

`Buffer`\<`ArrayBuffer`\>

#### list.responseStream

> `readonly` **responseStream**: `false` = `false`

### listByAccount

> `readonly` **listByAccount**: `object`

#### listByAccount.path

> `readonly` **path**: `"/nebius.iam.v2.AccessKeyService/ListByAccount"` = `"/nebius.iam.v2.AccessKeyService/ListByAccount"`

#### listByAccount.requestDeserialize()

> `readonly` **requestDeserialize**: (`value`) => [`ListAccessKeysByAccountRequest`](../interfaces/ListAccessKeysByAccountRequest.md)

##### Parameters

###### value

`Buffer`

##### Returns

[`ListAccessKeysByAccountRequest`](../interfaces/ListAccessKeysByAccountRequest.md)

#### listByAccount.requestSerialize()

> `readonly` **requestSerialize**: (`value`) => `Buffer`\<`ArrayBuffer`\>

##### Parameters

###### value

[`ListAccessKeysByAccountRequest`](../interfaces/ListAccessKeysByAccountRequest.md)

##### Returns

`Buffer`\<`ArrayBuffer`\>

#### listByAccount.requestStream

> `readonly` **requestStream**: `false` = `false`

#### listByAccount.responseDeserialize()

> `readonly` **responseDeserialize**: (`value`) => [`ListAccessKeysResponse`](../interfaces/ListAccessKeysResponse.md)

##### Parameters

###### value

`Buffer`

##### Returns

[`ListAccessKeysResponse`](../interfaces/ListAccessKeysResponse.md)

#### listByAccount.responseSerialize()

> `readonly` **responseSerialize**: (`value`) => `Buffer`\<`ArrayBuffer`\>

##### Parameters

###### value

[`ListAccessKeysResponse`](../interfaces/ListAccessKeysResponse.md)

##### Returns

`Buffer`\<`ArrayBuffer`\>

#### listByAccount.responseStream

> `readonly` **responseStream**: `false` = `false`

### update

> `readonly` **update**: `object`

#### update.path

> `readonly` **path**: `"/nebius.iam.v2.AccessKeyService/Update"` = `"/nebius.iam.v2.AccessKeyService/Update"`

#### update.requestDeserialize()

> `readonly` **requestDeserialize**: (`value`) => [`UpdateAccessKeyRequest`](../interfaces/UpdateAccessKeyRequest.md)

##### Parameters

###### value

`Buffer`

##### Returns

[`UpdateAccessKeyRequest`](../interfaces/UpdateAccessKeyRequest.md)

#### update.requestSerialize()

> `readonly` **requestSerialize**: (`value`) => `Buffer`\<`ArrayBuffer`\>

##### Parameters

###### value

[`UpdateAccessKeyRequest`](../interfaces/UpdateAccessKeyRequest.md)

##### Returns

`Buffer`\<`ArrayBuffer`\>

#### update.requestStream

> `readonly` **requestStream**: `false` = `false`

#### update.responseDeserialize()

> `readonly` **responseDeserialize**: (`value`) => [`Operation`](../../../common/v1/interfaces/Operation.md)

##### Parameters

###### value

`Buffer`

##### Returns

[`Operation`](../../../common/v1/interfaces/Operation.md)

#### update.responseSerialize()

> `readonly` **responseSerialize**: (`value`) => `Buffer`\<`ArrayBuffer`\>

##### Parameters

###### value

[`Operation`](../../../common/v1/interfaces/Operation.md)

##### Returns

`Buffer`\<`ArrayBuffer`\>

#### update.responseStream

> `readonly` **responseStream**: `false` = `false`
